--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@ A few things to note:
 
 - [[home/.emacs.d/config.org][My configuration]] is implemented as a [[https://en.wikipedia.org/wiki/Literate_programming][literate]] [[http://orgmode.org/worg/org-contrib/babel/intro.html][org]] document.
 - As a recovering vim user, I use [[https://www.emacswiki.org/emacs/Evil][evil-mode]]. Maybe one day I will learn the default Emacs keybindings.
-- I use [[http://oremacs.com/2015/04/16/ivy-mode/][ivy]] for completion. Previously, I used helm. They both change the experience of using Emacs pretty significantly -- I think for the better. 
+- I use [[https://github.com/emacs-helm/helm][helm]] for completion. Previously, I used helm and then ivy. They both change the experience of using Emacs pretty significantly -- I think for the better. 
 - I make some assumptions that I am running on OS X, but it loads and mostly works in a linux environment.
 
 Emacs took me a really long time to get into. I started my journey with [[http://spacemacs.org/][Spacemacs]], a fantastic Emacs starter kit that works well for vim users. After some time, I wanted to understand what was going on under the hood, and so I stopped using Spacemacs and made my own config.
