--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -495,6 +495,9 @@ Make scrolling behavior more like vim:
     :config
     (setq helm-ag-base-command "rg --no-heading --smart-case --hidden"))
 
+  (use-package helm-rg
+    :ensure t)
+
   (use-package helm-projectile
     :ensure t
     :config
@@ -1784,10 +1787,13 @@ I can type timestamped notes for a given tree with ~C-c C-z~. By default, they a
     :config)
 
   (use-package org-z
-    :after (helm-org-rifle)
+    :after (helm-org-rifle general)
     :load-path "site-lisp/org-z"
     :config
-    (org-z-mode 1))
+    (org-z-mode 1)
+
+    (leader-def :infix "o"
+      "s" 'org-z-knowledge-search))
 #+END_SRC
 
 #+RESULTS:
