--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -2118,6 +2118,9 @@ Take notes on PDFs in org-mode side-by-side with the PDF.
     :ensure t
     :after (general)
     :config
+    ;; Work around https://github.com/alphapapa/org-sidebar/issues/32
+    (require 'org-ql-search)
+
     (leader-def :infix "o"
       "b" 'org-sidebar-backlinks))
 #+end_src
