Get mu4e working again

--- a/home/.emacs.d/config.org
+++ b/home/.emacs.d/config.org
@@ -628,8 +628,7 @@ General.el is like evil-leader, but lets you define multiple leader keys / prefi
       "" '(:ignore t :which-key "b[o]okmarks")
       "c" '(:which-key "config-file"
                        :def (lambda () (interactive) (find-file "~/.emacs.d/config.org")))
-      "m" '(:which-key "mu4e"
-                       :command 'mu4e)
+      "m" '(mu4e :which-key "mu4e")
       "o" '(:which-key "org-file"
                        :def (lambda () (interactive) (find-file "~/org/projects.org"))))
 
@@ -2241,140 +2240,159 @@ This is long so that fetching feeds does not timeout.
 #+END_SRC
 * Email
 ** mu4e
+:PROPERTIES:
+:ID:       138E42BE-4873-4D74-AA72-2DA276D3F47F
+:END:
 
 #+BEGIN_SRC emacs-lisp
 
-  (add-to-list 'load-path "/usr/local/Cellar/mu/0.9.9.5/share/emacs/site-lisp/mu/mu4e")
-  
-  (setq mm-sign-option 'guided)
+    (setq mm-sign-option 'guided)
 
-  (use-package mu4e
-    :config
-    ;; default
-    (setq mu4e-maildir (expand-file-name "~/Maildir"))
-
-    ;; (setq mu4e-drafts-folder "/[Gmail].Drafts")
-    ;; (setq mu4e-sent-folder   "/[Gmail].Sent Mail")
-    ;; (setq mu4e-trash-folder  "/[Gmail].Trash")
-
-    ;; don't save message to Sent Messages, GMail/IMAP will take care of this
-    (setq mu4e-sent-messages-behavior 'delete)
-
-    ;; setup some handy shortcuts
-    ;; (setq mu4e-maildir-shortcuts
-    ;;       '(("/INBOX"             . ?i)
-    ;;         ("/[Gmail].Sent Mail" . ?s)
-    ;;         ("/[Gmail].Trash"     . ?t)))
-
-    ;; allow for updating mail using 'U' in the main view:
-    (setq mu4e-get-mail-command "mbsync -a")
-
-    (setq mu4e-change-filenames-when-moving t)
-
-    ;; Show images
-    (setq mu4e-view-show-images t)
-
-    ;; Don't use mu4e's default HTML renderer. It's hard to read for most messages.
-    (setq mu4e-html2text-command "html2text -utf8 -nobs -width 72")
-  
-    ;; 
-    (add-to-list 'mu4e-view-actions
-                 '("open URL" . mu4e-view-go-to-url) t)
-
-    (setq
-     user-mail-address "me@markhudnall.com"
-     user-full-name  "Mark Hudnall"
-     ;; message-signature
-     ;;  (concat
-     ;;    "Foo X. Bar\n"
-     ;;    "http://www.example.com\n")
-     )
-
-    ;; sending mail -- replace USERNAME with your gmail username
-    ;; also, make sure the gnutls command line utils are installed
-    ;; package 'gnutls-bin' in Debian/Ubuntu, 'gnutls' in Archlinux.
-
-    (use-package smtpmail
-      :ensure t
+    (use-package mu4e
+      :load-path "/usr/local/opt/mu/share/emacs/site-lisp/mu/mu4e"
+      :after general
       :config
-      (setq message-send-mail-function 'smtpmail-send-it
-            starttls-use-gnutls t
-            smtpmail-starttls-credentials
-            '(("smtp.gmail.com" 587 nil nil))
-            smtpmail-auth-credentials
-            (expand-file-name "~/.authinfo.gpg")
-            smtpmail-default-smtp-server "smtp.gmail.com"
-            smtpmail-smtp-server "smtp.gmail.com"
-            smtpmail-smtp-service 587
-            smtpmail-debug-info t))
+      ;; default
+      (setq mu4e-maildir (expand-file-name "~/Maildir"))
 
-    (use-package evil-mu4e
-      :ensure t)
+      ;; (setq mu4e-drafts-folder "/[Gmail].Drafts")
+      ;; (setq mu4e-sent-folder   "/[Gmail].Sent Mail")
+      ;; (setq mu4e-trash-folder  "/[Gmail].Trash")
 
-    (use-package org-mu4e
-      :config)
+      ;; don't save message to Sent Messages, GMail/IMAP will take care of this
+      (setq mu4e-sent-messages-behavior 'delete)
 
-    (setq mu4e-contexts
-          `( ,(make-mu4e-context
-               :name "Personal"
-               :enter-func (lambda () (mu4e-message "Switch to the Personal context"))
-               ;; leave-func not defined
-               :match-func (lambda (msg)
-                             (when msg 
-                               (mu4e-message-contact-field-matches msg 
-                                                                   :to "me@markhudnall.com")))
-               :vars '((user-mail-address        . "me@markhudnall.com"  )
-                       (user-full-name           . "Mark Hudnall" )
-                       (mu4e-drafts-folder       . "/Personal/[Gmail]/.Drafts")
-                       (mu4e-sent-folder         . "/Personal/[Gmail]/.Sent Mail")
-                       (mu4e-trash-folder        . "/Personal/[Gmail]/.Trash")
-                       (mu4e-refile-folder       . "/Personal/[Gmail]/.All Mail")
-                       (mu4e-maildir-shortcuts   . (("/Personal/INBOX" . ?i)
-                                                    ("Personal/[Gmail]/.Sent Mail"  . ?s)
-                                                    ("Personal/[Gmail]/.Trash" . ?t)))
-                       (mu4e-compose-signature   . nil)))
-             ,(make-mu4e-context
-               :name "Work"
-               :enter-func (lambda () (mu4e-message "Switch to the Work context"))
-               ;; leave-fun not defined
-               :match-func (lambda (msg)
-                             (when msg 
-                               (mu4e-message-contact-field-matches msg 
-                                                                   :to "mark@getclef.com")))
-               :vars '((user-mail-address        . "mark@getclef.com" )
-                       (user-full-name           . "Mark Hudnall" )
-                       (mu4e-drafts-folder       . "")
-                       (mu4e-drafts-folder       . "/Work/[Gmail]/.Drafts")
-                       (mu4e-sent-folder         . "/Work/[Gmail]/.Sent Mail")
-                       (mu4e-trash-folder        . "/Work/[Gmail]/.Trash")
-                       (mu4e-refile-folder       . "/Work/[Gmail]/.All Mail")
-                       (mu4e-maildir-shortcuts   . (("/Work/INBOX" . ?i)
-                                                    ("Work/[Gmail]/.Sent Mail"  . ?s)
-                                                    ("Work/[Gmail]/.Trash" . ?t)))
-                       (mu4e-compose-signature .
-                                               (concat
-                                                "---\n"
-                                                "Mark Hudnall\n"
-                                                "CTO and Co-founder of Clef\n"
-                                                "mark@getclef.com"))))))
+      ;; setup some handy shortcuts
+      ;; (setq mu4e-maildir-shortcuts
+      ;;       '(("/INBOX"             . ?i)
+      ;;         ("/[Gmail].Sent Mail" . ?s)
+      ;;         ("/[Gmail].Trash"     . ?t)))
 
-    ;; set `mu4e-context-policy` and `mu4e-compose-policy` to tweak when mu4e should
-    ;; guess or ask the correct context, e.g.
+      ;; allow for updating mail using 'U' in the main view:
+      (setq mu4e-get-mail-command "mbsync -a")
 
-    ;; start with the first (default) context; 
-    ;; default is to ask-if-none (ask when there's no context yet, and none match)
-    ;; (setq mu4e-context-policy 'pick-first)
+      (setq mu4e-change-filenames-when-moving t)
 
-    ;; compose with the current context is no context matches;
-    ;; default is to ask 
-    ;; '(setq mu4e-compose-context-policy nil)
+      ;; Show images
+      (setq mu4e-view-show-images t)
 
-    ;; (setq mu4e-update-interval 300)
-)
+      ;; Don't use mu4e's default HTML renderer. It's hard to read for most messages.
+      ;; (setq mu4e-html2text-command 'mu4e-shr2text)
+      (setq mu4e-html2text-command "html2text -utf8 -nobs -width 72")
+
+      (setq browse-url-generic-program 'browse-url-default-browser)
+
+      ;; 
+      (add-to-list 'mu4e-view-actions
+                   '("open URL" . mu4e-view-go-to-url) t)
+
+      (add-to-list 'mu4e-view-actions
+                   '("browser (open in)" . mu4e-action-view-in-browser) t)
+
+      (general-define-key :keymaps '(mu4e-view-mode-map)
+                          "J" 'mu4e-view-headers-next
+                          "K" 'mu4e-view-headers-prev)
+
+      (setq
+       user-mail-address "me@markhudnall.com"
+       user-full-name  "Mark Hudnall"
+       ;; message-signature
+       ;;  (concat
+       ;;    "Foo X. Bar\n"
+       ;;    "http://www.example.com\n")
+       )
+
+      ;; sending mail -- replace USERNAME with your gmail username
+      ;; also, make sure the gnutls command line utils are installed
+      ;; package 'gnutls-bin' in Debian/Ubuntu, 'gnutls' in Archlinux.
+
+      (use-package smtpmail
+        :ensure t
+        :config
+        (setq message-send-mail-function 'smtpmail-send-it
+              starttls-use-gnutls t
+              smtpmail-starttls-credentials
+              '(("smtp.gmail.com" 587 nil nil))
+              smtpmail-auth-credentials
+              (expand-file-name "~/.authinfo.gpg")
+              smtpmail-default-smtp-server "smtp.gmail.com"
+              smtpmail-smtp-server "smtp.gmail.com"
+              smtpmail-smtp-service 587
+              smtpmail-debug-info t))
+
+      (use-package org-mu4e
+        :config)
+
+      (setq mu4e-tags '(
+                        "jobs"
+                        ))
+
+      (add-to-list 'mu4e-marks
+                   '(tagarchive
+                     :char       "t"
+                     :prompt     "tagarchive"
+                     :ask-target (lambda () (completing-read "Choose a tag: " mu4e-tags))
+                     :action      (lambda (docid msg target)
+                                    (mu4e-action-retag-message msg (concat "+" target ",-\\Inbox"))
+                                    (mu4e~proc-move docid mu4e-refile-folder))))
+
+      (add-to-list 'mu4e-marks
+                   '(tag
+                     :char       "T"
+                     :prompt     "tag"
+                     :ask-target (lambda () (completing-read "Choose a tag: " mu4e-tags))
+                     :action      (lambda (docid msg target)
+                                    (mu4e-action-retag-message msg (concat "+" target)))))
+
+
+      (defun mu4e-headers-mark-for-tag (args)
+        "Mark header at point with tag."
+        (interactive "P")
+        (if args
+            (mu4e-headers-mark-and-next 'tag)
+            (mu4e-headers-mark-and-next 'tagarchive)))
+      (general-define-key :keymaps '(mu4e-headers-mode-map)
+                          "t" 'mu4e-headers-mark-for-tag)
+
+      (setq mu4e-contexts
+            `( ,(make-mu4e-context
+                 :name "Personal"
+                 :enter-func (lambda () (mu4e-message "Switch to the Personal context"))
+                 ;; leave-func not defined
+                 :match-func (lambda (msg)
+                               (when msg 
+                                 (mu4e-message-contact-field-matches msg 
+                                                                     :to "me@markhudnall.com")))
+                 :vars '((user-mail-address        . "me@markhudnall.com"  )
+                         (user-full-name           . "Mark Hudnall" )
+                         (mu4e-compose-reply-to-address           . "me@markhudnall.com" )
+                         (mu4e-drafts-folder       . "/Personal/[Gmail]/.Drafts")
+                         (mu4e-sent-folder         . "/Personal/[Gmail]/.Sent Mail")
+                         (mu4e-trash-folder        . "/Personal/[Gmail]/.Trash")
+                         (mu4e-refile-folder       . "/Personal/[Gmail]/.All Mail")
+                         (mu4e-maildir-shortcuts   . (("/Personal/INBOX" . ?i)
+                                                      ("Personal/[Gmail]/.Sent Mail"  . ?s)
+                                                      ("Personal/[Gmail]/.Trash" . ?t)))
+                         (mu4e-compose-signature   . nil)))))
+
+      ;; set `mu4e-context-policy` and `mu4e-compose-policy` to tweak when mu4e should
+      ;; guess or ask the correct context, e.g.
+
+      ;; start with the first (default) context; 
+      ;; default is to ask-if-none (ask when there's no context yet, and none match)
+      ;; (setq mu4e-context-policy 'pick-first)
+
+      ;; compose with the current context is no context matches;
+      ;; default is to ask 
+      ;; '(setq mu4e-compose-context-policy nil)
+
+      ;; (setq mu4e-update-interval 300)
+  )
 #+END_SRC
 
 #+RESULTS:
 : t
+
 * Budgeting
 
 Not actively using this right now.
@@ -2438,6 +2456,9 @@ Higher level wrapper on-top of deferred.el. Interesting to play around with.
 #+RESULTS:
 
 ** String manipulation (s.el)
+:PROPERTIES:
+:ID:       F34F53A1-F9AB-4724-BFD9-1D832E6C1272
+:END:
 
 #+BEGIN_SRC emacs-lisp
   (use-package s
